NetBSD Problem Report #56853

From kardel@Kardel.name  Mon May 23 13:25:32 2022
Return-Path: <kardel@Kardel.name>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.3 with cipher TLS_AES_256_GCM_SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 3B2A51A921F
	for <gnats-bugs@gnats.NetBSD.org>; Mon, 23 May 2022 13:25:32 +0000 (UTC)
Message-Id: <20220523132529.93A6744B33@Andromeda.Kardel.name>
Date: Mon, 23 May 2022 15:25:29 +0200 (CEST)
From: kardel@netbsd.org
Reply-To: kardel@netbsd.org
To: gnats-bugs@NetBSD.org
Subject: re-instate vga* support for XEN3_DOM0
X-Send-Pr-Version: 3.95

>Number:         56853
>Category:       kern
>Synopsis:       re-instate vga* support for XEN3_DOM0
>Confidential:   no
>Severity:       serious
>Priority:       high
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon May 23 13:30:00 +0000 2022
>Closed-Date:    Wed May 25 10:54:58 +0000 2022
>Last-Modified:  Wed May 25 10:54:58 +0000 2022
>Originator:     kardel@netbsd.org
>Release:        NetBSD 9.99.96
>Organization:

>Environment:


System: NetBSD toblerone.hw.abs.acrys.com 9.99.96 NetBSD 9.99.96 (XEN3_DOM0) #2: Thu May 19 20:42:31 CEST 2022  kardel@pip:/src/NetBSD/cur/src/obj.amd64/sys/arch/amd64/compile/XEN3_DOM0 amd64
Architecture: x86_64
Machine: amd64
>Description:
	Booting XEN3_DOM0 9.99.96 on a Supermicro ends up with a black screen after the Xen boot messages.
	Turns out the vga0 is not attached as it is not configured for XENPV - see XEN3_DOM0.
	#vga*           at pci? dev ? function ?# Needs acpi_md_vbios_reset
						# in acpi_wakeup.c (!xenpv)
	dmesg:
	ppb38 at pci41 dev 0 function 0: ASPEED Technology AST1150 PCIe-to-PCI bridge (rev. 0x04)
	ppb38: PCI Express capability version 2 <PCI-E to PCI/PCI-X Bridge>
	pci42 at ppb38 bus 200
	pci42: i/o space, memory space enabled
	ASPEED Technology ASPEED Graphics Family (VGA display, revision 0x41) at pci42 dev 0 function 0 not configured

	In 9.99.55 vga0 did attach.
	vga0 at pci42 dev 0 function 0: vendor 1a03 product 2000 (rev. 0x41)
	wsdisplay0 at vga0 kbdmux 1: console (80x25, vt100 emulation)

	As these ASPEED VGA/BMC/IPMI devices are in many of the larger servers dropping VGA device support is
	a serious regression.

	Originating PR kern/55667

>How-To-Repeat:
	Boot XEN3_DOM0 9.99.96 on a server with ASPEED VGA graphics. observe a black screen.
>Fix:
	revisit VGA support for XENPV

>Release-Note:

>Audit-Trail:
From: Manuel Bouyer <bouyer@antioche.eu.org>
To: gnats-bugs@netbsd.org
Cc: kern-bug-people@netbsd.org, gnats-admin@netbsd.org, netbsd-bugs@netbsd.org
Subject: Re: kern/56853: re-instate vga* support for XEN3_DOM0
Date: Tue, 24 May 2022 18:23:15 +0200

 On Mon, May 23, 2022 at 01:30:01PM +0000, kardel@netbsd.org wrote:
 > >Description:
 > 	Booting XEN3_DOM0 9.99.96 on a Supermicro ends up with a black screen after the Xen boot messages.
 > 	Turns out the vga0 is not attached as it is not configured for XENPV - see XEN3_DOM0.
 > 	#vga*           at pci? dev ? function ?# Needs acpi_md_vbios_reset
 > 						# in acpi_wakeup.c (!xenpv)

 As a workaround, one can boot with
 menu=Boot Xen sync:load /netbsd-XEN3_DOM0 ; multiboot /xen-debug.gz dom0_mem=256
 M console=vga sync_console=true vga=text-80x80,keep

 With this xen keeps control of the VGA console and the NetBSD kernel
 can print on it. You don't have keyboard input, but at last you can see
 the boot messages

 -- 
 Manuel Bouyer <bouyer@antioche.eu.org>
      NetBSD: 26 ans d'experience feront toujours la difference
 --

State-Changed-From-To: open->feedback
State-Changed-By: bouyer@NetBSD.org
State-Changed-When: Tue, 24 May 2022 17:09:03 +0000
State-Changed-Why:
Should be fixed with
http://mail-index.netbsd.org/source-changes/2022/05/24/msg138813.html


From: "Manuel Bouyer" <bouyer@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/56853 CVS commit: src/sys/arch
Date: Tue, 24 May 2022 17:06:08 +0000

 Module Name:	src
 Committed By:	bouyer
 Date:		Tue May 24 17:06:08 UTC 2022

 Modified Files:
 	src/sys/arch/amd64/conf: XEN3_DOM0
 	src/sys/arch/xen/xen: xen_acpi_machdep.c

 Log Message:
 PR kern/56853: add a dummy acpi_md_vbios_reset variable so that we
 can again enable vga at pci for Xen.
 Note that this only works in BIOS mode, not UEFI mode.


 To generate a diff of this commit:
 cvs rdiff -u -r1.195 -r1.196 src/sys/arch/amd64/conf/XEN3_DOM0
 cvs rdiff -u -r1.5 -r1.6 src/sys/arch/xen/xen/xen_acpi_machdep.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Frank Kardel <kardel@netbsd.org>
To: gnats-bugs@netbsd.org, kern-bug-people@netbsd.org,
 netbsd-bugs@netbsd.org, gnats-admin@netbsd.org, bouyer@NetBSD.org
Cc: 
Subject: Re: kern/56853 (re-instate vga* support for XEN3_DOM0)
Date: Wed, 25 May 2022 12:21:58 +0200

 Thanks vga attaches again.
 PR can be closed.

 On 05/24/22 19:09, bouyer@NetBSD.org wrote:
 > Synopsis: re-instate vga* support for XEN3_DOM0
 >
 > State-Changed-From-To: open->feedback
 > State-Changed-By: bouyer@NetBSD.org
 > State-Changed-When: Tue, 24 May 2022 17:09:03 +0000
 > State-Changed-Why:
 > Should be fixed with
 > http://mail-index.netbsd.org/source-changes/2022/05/24/msg138813.html
 >
 >
 >

State-Changed-From-To: feedback->closed
State-Changed-By: kardel@NetBSD.org
State-Changed-When: Wed, 25 May 2022 10:54:58 +0000
State-Changed-Why:
issue fixed


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.46 2020/01/03 16:35:01 leot Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2020 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.