PR kern/56853: add a dummy acpi_md_vbios_reset variable so that we can again enable vga at pci for Xen. Note that this only works in BIOS mode, not UEFI mode.